--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*////////////// Fonts //////////////*/
 
 /* link the web font used for the level 1 heading here */
-@font-face {
+h1 {
 	font-family: 'Baskerville';
 	src: url(../fonts/Baskerville.ttc);
 }
@@ -22,5 +22,3 @@ body {
 }
 
 /* Write all remaining styles here */
-
-
