--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body {
 /* Write all remaining styles here */
 
 h1 {
-  font-family: 'Baskerville', serif;
+  padding-bottom: 10px;
+	margin: 0 0 5px;
+	font-size: 5em;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+	border-bottom: 1px solid #ccc;
   
 }
