--- a/css/style.css
+++ b/css/style.css
@@ -69,11 +69,11 @@ header a:hover {
   text-decoration: underline;
 }
 
-#links {
+#press {
   margin-bottom: 20px;
 }
 
-#links img {
+#press img {
   border: 5px #ccc solid;
   padding-left: 1px;
 }
