--- a/css/style.css
+++ b/css/style.css
@@ -77,3 +77,12 @@ header a:hover {
   border: 5px #ccc solid;
   padding-left: 1px;
 }
+
+#press img:hover {
+  border: 5px rgb(111,127,122) solid;
+}
+
+footer {
+  text-align: right;
+  background: #fff;
+}
