--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /*////////////// Fonts //////////////*/
 
+/* link the web font used for the level 1 heading here */
 @font-face {
 	font-family: 'Baskerville';
 	src: url(../fonts/Baskerville.ttc);
@@ -7,15 +8,11 @@
 
 /*////////// Global Styles //////////*/
 
-* {
-	padding: 0;
-	margin: 0;
-}
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
@@ -25,8 +22,10 @@ body {
 	padding: 0 45px 20px;
 }
 
+/* Write all remaining styles here */
+
 h1 {
-	padding-bottom: 10px;
+  padding-bottom: 10px;
 	margin: 0 0 5px;
 	font-size: 5em;
 	font-weight: normal;
@@ -35,58 +34,56 @@ h1 {
 }
 
 h2 {
-	color: rgb(111,127,122);
-	font-size: 2em;
+  color: rgb(111,127,122);
+  font-size: 2em;
 }
 
-p  {
-	color: #555;
-	font-size: 1em;
-	margin: 0 0 20px 0;
+p {
+  color: #555;
+  font-size: 1em;
+  margin-left: 0 0 20px 0;
 }
 
-.small {
-	font-size: 0.8em;
+.footer {
+  font-size: 0.8em;
 }
-
-/*////////// Section Styles //////////*/
 
 header a {
-	color: rgb(152,173,166);
-	text-decoration: none;
+  color: rgb(152, 173, 166);
+  text-decoration: none;
 }
 
 header a:hover {
-	color: rgb(111,127,122);
+  color: rgb(111,127,122);
 }
 
 #featured img {
-	border: 5px rgb(152,173,166) solid;
+  border: 5px rgb(152,173,166) solid;
 }
 
 #featured a {
-	color: #1783bb;
-	text-decoration: none;
+  color: #1783bb;
+  text-decoration: none;
 }
 
 #featured a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 #press {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 #press img {
-	border: 5px #ccc solid;
-	padding: 1px;
+  border: 5px #ccc solid;
+  padding-left: 1px;
 }
 
 #press img:hover {
-	border: 5px rgb(111,127,122) solid;
+  border: 5px rgb(111,127,122) solid;
 }
 
 footer {
-	text-align: right;
-	background: #fff;
+  text-align: right;
+  background: #fff;
 }
